--- a/projekat/src/App.css
+++ b/projekat/src/App.css
@@ -1,3 +1,5 @@
+
+@import '~antd/dist/antd.css';
 input {
   outline: none;
   border: none;
@@ -26,7 +28,7 @@ button:hover {
   background-size: cover;
   display: flex;
   flex-direction:column;
-  justify-content: center;
+ /* justify-content: center; */
   align-items: center;
 }
 
