--- a/projekat/src/App.css
+++ b/projekat/src/App.css
@@ -3,11 +3,13 @@ input {
     outline: none;
     border: none;
     padding-left: 35px;
+    width: 10%;
 }
 
 input::placeholder {
     color: #fff;
     padding-left: 5%;
+
 }
 
 .uisegment {
@@ -16,24 +18,30 @@ input::placeholder {
 }
 
 input {
-    width: 100%;
+    width: 190px;
 }
 
 button {
     border: none;
     background: transparent;
+    width: 190px;
 }
 
 button:hover {
     cursor: pointer;
 }
-
+.card {
+    margin-left: 30px;
+}
 .container {
     width: 100%;
     min-height: 100vh;
-    background-color: white;
+    /* background-color: white; */
+    /* background-color: rgb(243, 241, 241); */
+    background: url("../src/bg.jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-attachment: fixed;
+    background-size: 100%;
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
@@ -46,7 +54,9 @@ button:hover {
     overflow: hidden;
     padding: 5% 5%;
     background: #ede3fd;
-    background-color: #2196F3;
+    background-color: #2196F380;
+    margin-bottom: 20px;
+    /* background: #ffffff90; */
 }
 
 .form {
@@ -107,7 +117,7 @@ button:hover {
 }
 
 .wrap-input {
-    width: 100%;
+    /* width: 100%; */
     position: relative;
     border-bottom: 2px solid #fff;
     margin-bottom: 20px;
@@ -135,8 +145,10 @@ button:hover {
 }
 
 select {
+    width: 190px;
     height: 25px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    border-radius: 5px;
 }
 
 .input-login {
@@ -158,6 +170,7 @@ select {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    /* margin-left: 25px; */
 }
 
 .half1 {
@@ -201,31 +214,51 @@ select {
 
 a {
     text-decoration: none;
+    font-size: 16px;
 }
 
 .list-prihod {
     padding: 1%;
     background: linear-gradient(to right, #11998e, #38ef7d);
-    box-shadow: 5px 5px grey;
+    /* box-shadow: 5px 5px grey; */
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .list-rashod {
     padding: 1%;
     background: linear-gradient(to right, #ed213a, #93291e);
-    box-shadow: 5px 5px grey;
+    /* box-shadow: 5px 5px grey; */
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.centerTitle{
+    text-align: center;
+    margin:50px;
+    border: 1px solid white;
+    border-radius: 5px;
+    margin: auto;
 }
 
 .input-number-prihod {
     background: linear-gradient(to right, #11998e, #38ef7d);
     color: white;
     border: solid #38ef7d;
-    height: 130%;
+    /* height: 130%; */
+    height: 38px;
+    border-radius: 5px; 
 }
 
 .ukupan-prihod {
-    color: #11998e;
+    /* color: #11998e; */
+    /* color: #0d776e; */
+    color: #0a5838;
     margin: auto;
     font-size: 3em;
+}
+.content {
+    margin-bottom: 0 !important;
 }
 
 .ukupan-rashod {
@@ -237,25 +270,35 @@ a {
     background: linear-gradient(to right, #ed213a, #93291e);
     color: white;
     border: solid #ed213a;
-    height: 130%;
+    /* height: 130%; */
+    height: 38px;
+    border-radius: 5px;
+}
+
+.item{
+    color: white !important;
 }
 
 .container-btn {
     width: 100%;
-    padding: 0.5em;
+    /* width: 20%; */
+    margin: auto;
+    /* padding: 0.5em; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     font-size: 3em;
+    /* border: 1px solid green;
+    border-radius: 5px; */
 }
 
 .red {
     color: #93291e;
 }
 
-.green {
+/* .green {
     color: #38ef7d;
-}
+} */
 
 .total {
     font-size: 2em;
@@ -265,12 +308,16 @@ a {
 
 .chart-wrap-expense {
     background-color: white;
-    box-shadow: 1px 1px 20px red inset;
+    /* box-shadow: 1px 1px 20px red inset; */
+    box-shadow: 0px 0px 2px 2px red inset;
+    border-radius: 5px;
 }
 
 .chart-wrap-income {
     background-color: white;
-    box-shadow: 1px 1px 20px green inset;
+    /* box-shadow: 1px 1px 20px green inset; */
+    box-shadow: 0px 0px 2px 2px green inset;
+    border-radius: 5px;
 }
 
 .component-wrap {
@@ -280,11 +327,26 @@ a {
     justify-content: center;
 }
 
+.component-wrap form p{
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 7px;
+    width: 340px;
+}
+
 .centralize {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.half2 .component-wrap form .centralize{
+    margin: auto;
+    margin-bottom: 10px;
+}
+.half1 .component-wrap form .centralize{
+    margin: auto;
+    margin-bottom: 10px;
 }
 
 .login-width {
