bilans bug fixed

--- a/projekat/src/App.css
+++ b/projekat/src/App.css
@@ -319,9 +319,9 @@ a {
     color: #93291e;
 }
 
-/* .green {
-    color: #38ef7d;
-} */
+ .green {
+   color: #38ef7d;
+} 
 
 .total {
     font-size: 2em;
