--- a/projekat/src/App.css
+++ b/projekat/src/App.css
@@ -29,7 +29,9 @@ button {
 
 .obrisi{
     width:auto;
-    color:white;
+    float: right;
+    /* padding-bottom: 6px; */
+    padding-right: 20px;
 }
 
 button:hover {
