--- a/projekat/src/App.css
+++ b/projekat/src/App.css
@@ -28,10 +28,37 @@ button {
 }
 
 .obrisi{
-    width:auto;
+    display: none;
     float: right;
-    /* padding-bottom: 6px; */
-    padding-right: 20px;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    cursor: pointer;
+    width: 5px;
+    font-family: cursive;
+    position: relative;
+    right: 35px;
+    bottom: 20px;
+}
+.transformCat{
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.transformDes{
+    font-weight: 500;
+    text-transform: capitalize;
+}
+
+.items:hover{
+    /* background-color: #11998e50; */
+    background-color: #33333340;
+    border-radius: 5px;
+    /* background-color: #b4b4b450; */
+}
+.items:hover .obrisi{
+    color: red;
+    display: block;
 }
 
 button:hover {
